# imglib

./: CMakeLists.txt
examples/: display_loop.c  display_pgm_P2.c  display_pgm_P5.c  p4_pbm_comment.c  p4_pbm_display.c  pixel_display.c  read_pbm_file.c  read_pgm_file.c
examples/debug/: display_loop.c  display_pgm_P2.c  display_pgm_P5.c  display_ppm_P3.c  display_ppm_P6.c  p4_pbm_comment.c  p4_pbm_display.c  pixel_display.c  read_pbm_file.c  read_pgm_file.c  read_ppm_file.c  write_testing.c
include/: imglib.h
modules/core/: CMakeLists.txt  image.c  image.h
modules/core/include/: core.h
modules/highgui/: CMakeLists.txt  display.c  wind.c  wind.h  window.c  window.h
modules/highgui/include/: highgui.h
modules/imgcodecs/: CMakeLists.txt  display.h  imgcodecs_utils.c  imgcodecs_utils.h  read.c  read.h  read_pxm.c  read_pxm.h  write.c  write.h  write_pxm.c  write_pxm.h
modules/imgcodecs/include/: imgcodecs.h
